k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 80
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 80
